# Knob_Profiler

./: README.md
baseline/: baseline.sh  class_example.cpp  class_example.h  class_example2.cpp  example.cc
glibcForPRELOAD/glibc-2.31/: Makerules  Rules
glibcForPRELOAD/glibc-2.31/gmon/: gmon.c  mcount.c
glibcForPRELOAD/glibc-2.31/include/: unistd.h
glibcForPRELOAD/glibc-2.31/stdlib/: atexit.c
glibcForPRELOAD/glibc-2.31/sysdeps/posix/: profil.c  sprofil.c
glibcForPRELOAD/glibc-2.31/sysdeps/unix/sysv/linux/: prof-freq.c  profil-counter.h
glibcForPRELOAD/glibc-2.31/sysdeps/unix/sysv/linux/x86_64/: sigcontextinfo.h
knob_profiler/var_discover/: CMakeLists.txt  knob_deps_pass.cc  knob_deps_pass.h  knob_deps_pass_test.cc  util.h
test/: example.ll  knob_profiler_config_seed.txt  test_innodb.sh  test_pipeline.sh  test_pipeline_test.sh
test/r/: example  executionPath.txt  schema.txt  src2basicblock.txt
test/r_buffer/: executionPath.txt  schema.txt  src2basicblock.txt
test/r_executor/: executionPath.txt  schema.txt  src2basicblock.txt
test/r_mysqld/: executionPath.txt  schema.txt  src2basicblock.txt
test/r_optimizer/: schema.txt  src2basicblock.txt
test/r_parse/: executionPath.txt  schema.txt  src2basicblock.txt
